<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.CountryDetailsFragment">

    <ImageView
        android:id="@+id/ivCountryFlag"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/country_flag_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/black"
        android:scaleType="centerCrop"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ivCountryFlag"
        android:id="@+id/clTextViewsLayout"
        android:padding="15dp"
        >

        <TextView
            android:id="@+id/tvCountryNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/official_name_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tvCountryCapitalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capital_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCountryNameTitle" />

        <TextView
            android:id="@+id/tvAreaTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCountryCapitalTitle" />

        <TextView
            android:id="@+id/tvPopulationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/population_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAreaTitle" />

        <TextView
            android:id="@+id/tvRegionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPopulationTitle" />

        <TextView
            android:id="@+id/tvSubregionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subregion_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRegionTitle" />

        <TextView
            android:id="@+id/tvCountryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tvCountryNameTitle"
            app:layout_constraintTop_toTopOf="@+id/tvCountryNameTitle"
            tools:text="Canada" />

        <TextView
            android:id="@+id/tvCountryCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvCountryCapitalTitle"
            app:layout_constraintTop_toTopOf="@+id/tvCountryCapitalTitle"
            tools:text="Ottawa" />

        <TextView
            android:id="@+id/tvArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tvAreaTitle"
            app:layout_constraintTop_toTopOf="@+id/tvAreaTitle"
            tools:text="25000m2" />

        <TextView
            android:id="@+id/tvPopulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tvPopulationTitle"
            app:layout_constraintTop_toTopOf="@+id/tvPopulationTitle"
            tools:text="2500 people" />

        <TextView
            android:id="@+id/tvRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tvRegionTitle"
            app:layout_constraintTop_toTopOf="@+id/tvRegionTitle"
            tools:text="Region" />


        <TextView
            android:id="@+id/tvSubregion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tvSubregionTitle"
            app:layout_constraintTop_toTopOf="@+id/tvSubregionTitle"
            tools:text="Subregion" />

        <TextView
            android:id="@+id/tvbBrderCountriesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/border_countries_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubregionTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCountriesRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTextViewsLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>